--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           <h2>Locations</h2>
           <p class='lead'>Misaka Mikoto Network is located in APAC and EU regions.</p>
           <ul>
-            <li>South Korea : <a class='ul' href='https://www.equinix.ie/data-centers/asia-pacific-colocation/korea-colocation/seoul-data-center/sl1'>Equinix SL1</a></li>
-            <li>London(planned) : <a class='ul' href='https://www.telehouse.net/data-centre-services/uk/london/telehouse-north-two/'>Telehouse North 2</a></li>
+            <li>South Korea / Seoul : <a class='ul' href='https://www.equinix.ie/data-centers/asia-pacific-colocation/korea-colocation/seoul-data-center/sl1'>Equinix SL1</a></li>
+            <li>United Kingdom / London(planned) : <a class='ul' href='https://www.telehouse.net/data-centre-services/uk/london/telehouse-north-two/'>Telehouse North 2</a></li>
           </ul>
         </div>
       </div>
