--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class='row gx-4 justify-content-center'>
         <div class='col-lg-8'>
           <h2>Locations</h2>
-          <p class='lead'>Misaka Mikoto Network is located in APAC and EU regions.</p>
+          <p class='lead'>Misaka Mikoto Network is located in APNIC and RIPE regions.</p>
           <ul>
             <li>South Korea / Seoul : <a class='ul' href='https://www.equinix.ie/data-centers/asia-pacific-colocation/korea-colocation/seoul-data-center/sl1'>Equinix SL1</a></li>
             <li>United Kingdom / London(planned) : <a class='ul' href='https://www.telehouse.net/data-centre-services/uk/london/telehouse-north-two/'>Telehouse North 2</a></li>
