Add Hurricane Electric BGP Toolkit

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <p class='lead'>Misaka Mikoto Network is created for educational purposes and providing public services.
             <ul>
               <li>Linux package mirror : <a class='ul' href='https://mirror.misakamikoto.network'>Misaka Mikoto Network Mirror</a></li>
-              <li>BGP Info : <a class='ul' href='https://bgp.tools/prefix/2a0f:9400:7721::/48'>BGP Tools</a></li>
+              <li>BGP Info : <a class='ul' href='https://bgp.tools/prefix/2a0f:9400:7721::/48'>BGP Tools</a>, <a class='ul' href='https://bgp.he.net/net/2a0f:9400:7721::/48'>Hurricane Electric BGP Toolkit</a></li>
             </ul>
           </p>
         </div>
