--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <header class='bg-primary bg-gradient text-white'>
     <div class='container px-4 text-center'>
       <h1 class='fw-bolder'>Welcome to Misaka Mikoto Network</h1>
-      <p class='lead'>A personal network maintained by <a href='https://twitter.com/kwabang2827'>KyeongTaek Kim</a></p>
+      <p class='lead'>A personal network maintained by <a href='https://twitter.com/kwabang2827'>Gyeongtaek Kim</a></p>
     </div>
   </header>
   <!-- About section-->
