--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href='css/styles.css' rel='stylesheet' />
   <!-- NOTE:  Open Graph -->
   <meta property="og:title" content="Misaka Mikoto Network">
-  <meta property="og:description" content="A personal network maintained by KyeongTaek Kim">
+  <meta property="og:description" content="A personal network maintained by Gyeongtaek Kim">
   <meta property="og:image" content="https://misakamikoto.network/assets/profile.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="300">
@@ -52,7 +52,7 @@
           <p class='lead'>Misaka Mikoto Network is created for educational purposes and providing public services.
             <ul>
               <li>Linux package mirror : <a class='ul' href='https://mirror.misakamikoto.network'>Misaka Mikoto Network Mirror</a></li>
-              <li>BGP Info : <a class='ul' href='https://bgp.tools/prefix/2a0f:9400:7721::/48'>BGP Tools</a>, <a class='ul' href='https://bgp.he.net/net/2a0f:9400:7721::/48'>Hurricane Electric BGP Toolkit</a></li>
+              <li>BGP Info : <a class='ul' href='https://bgp.tools/as/203979'>BGP Tools</a>, <a class='ul' href='https://www.peeringdb.com/net/30426/'>PeeringDB</a>, <a class='ul' href='https://bgp.he.net/AS203979'>Hurricane Electric BGP Toolkit</a></li>
             </ul>
           </p>
         </div>
@@ -82,7 +82,7 @@
           <h2>Contact us</h2>
           <p class='lead'></p>
           <ul>
-            <li>NOC Email : maintainer@misakamikoto.network</li>
+            <li>NOC Email : noc@misakamikoto.network</li>
             <li>Abuse Email : abuse@misakamikoto.network</li>
             <li>Discord : Kwabang#3891</li>
           </ul>
