--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href='css/styles.css' rel='stylesheet' />
   <!-- NOTE:  Open Graph -->
-  <meta property="og:title" content="Misaka Mikoto Network">
+  <meta property="og:title" content="Misaka Mikoto Network (AS203979)">
   <meta property="og:description" content="A personal network maintained by Gyeongtaek Kim">
   <meta property="og:image" content="https://misakamikoto.network/assets/profile.png">
   <meta property="og:image:type" content="image/png">
@@ -39,7 +39,7 @@
   <!-- Header-->
   <header class='bg-primary bg-gradient text-white'>
     <div class='container px-4 text-center'>
-      <h1 class='fw-bolder'>Welcome to Misaka Mikoto Network</h1>
+      <h1 class='fw-bolder'>Welcome to Misaka Mikoto Network (AS203979)</h1>
       <p class='lead'>A personal network maintained by <a href='https://twitter.com/kwabang2827'>Gyeongtaek Kim</a></p>
     </div>
   </header>
@@ -68,7 +68,7 @@
           <p class='lead'>Misaka Mikoto Network is located in APNIC and RIPE regions.</p>
           <ul>
             <li>South Korea / Seoul : <a class='ul' href='https://www.equinix.ie/data-centers/asia-pacific-colocation/korea-colocation/seoul-data-center/sl1'>Equinix SL1</a></li>
-            <li>United Kingdom / London(planned) : <a class='ul' href='https://www.telehouse.net/data-centre-services/uk/london/telehouse-north-two/'>Telehouse North 2</a></li>
+            <li>United Kingdom / London : <a class='ul' href='https://www.telehouse.net/data-centre-services/uk/london/telehouse-north-two/'>Telehouse North 2</a></li>
           </ul>
         </div>
       </div>
