--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
           <h2>Locations</h2>
           <p class='lead'>Misaka Mikoto Network is located in APNIC and RIPE regions.</p>
           <ul>
-            <li>South Korea / Seoul : <a class='ul' href='https://www.equinix.ie/data-centers/asia-pacific-colocation/korea-colocation/seoul-data-center/sl1'>Equinix SL1</a></li>
-            <li>United Kingdom / London : <a class='ul' href='https://www.telehouse.net/data-centre-services/uk/london/telehouse-north-two/'>Telehouse North 2</a></li>
+            <li><b>Seoul</b>, South Korea : <a class='ul' href='https://www.equinix.ie/data-centers/asia-pacific-colocation/korea-colocation/seoul-data-center/sl1'>Equinix SL1</a></li>
+            <li><b>London</b>, United Kingdom : <a class='ul' href='https://www.telehouse.net/data-centre-services/uk/london/telehouse-north-two/'>Telehouse North 2</a></li>
+            <li><b>Tokyo</b>, Japan : <a class='ul' href='https://www.oracle.com/cloud/cloud-regions/data-regions/'>Oracle Cloud Japan East (Tokyo)</a></li>
+            <li><b>Ashburn</b>, United States : <a class='ul' href='https://www.oracle.com/cloud/cloud-regions/data-regions/'>Oracle Cloud US East (Ashburn)</a></li>
           </ul>
         </div>
       </div>
