--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           <ul>
             <li><b>Seoul</b>, South Korea : <a class='ul' href='https://www.equinix.ie/data-centers/asia-pacific-colocation/korea-colocation/seoul-data-center/sl1'>Equinix SL1</a></li>
             <li><b>London</b>, United Kingdom : <a class='ul' href='https://www.telehouse.net/data-centre-services/uk/london/telehouse-north-two/'>Telehouse North 2</a></li>
-            <li><b>Tokyo</b>, Japan : <a class='ul' href='https://www.oracle.com/cloud/cloud-regions/data-regions/'>Oracle Cloud Japan East (Tokyo)</a></li>
-            <li><b>Ashburn</b>, United States : <a class='ul' href='https://www.oracle.com/cloud/cloud-regions/data-regions/'>Oracle Cloud US East (Ashburn)</a></li>
+            <li><b>Tokyo</b>, Japan : <a class='ul' href='https://www.oracle.com/cloud/cloud-regions/data-regions/#apac'>Oracle Cloud Japan East (Tokyo)</a></li>
+            <li><b>Ashburn</b>, United States : <a class='ul' href='https://www.oracle.com/cloud/cloud-regions/data-regions/#northamerica'>Oracle Cloud US East (Ashburn)</a></li>
           </ul>
         </div>
       </div>
